--- a/src/main/resources/templates/monmovie.html
+++ b/src/main/resources/templates/monmovie.html
@@ -25,18 +25,24 @@
             <a href="">Valide</a>
         </div>
     </form>
+</div>
+
     <div class="gauche">
         <p>Greg:</p>
         <p>Il est trop cool</p>
     </div>
+
+    <div class="end">
     <div class="droite">
         <p>Susane:</p>
         <p>Trop nazzzz</p>
     </div>
+</div>
+
     <div class="gauche">
         <p>Arno:</p>
         <p>J'ai meme pas peur!!!</p>
     </div>
-</div>
+
 </body>
 </html>
